src/assets/scss/common/cards.scss
.cards-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 100%;
  grid-gap: 15px;
  margin-bottom: 30px;

  @media screen and (max-width: $smDesktopWidth) {
    grid-template-columns: repeat(2, 1fr);
  }
  @media screen and (max-width: $phoneWidth) {
    grid-template-columns: repeat(2, 1fr);
  }
}

.tournaments-cards-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 100%;
  grid-gap: 15px;
  margin-bottom: 30px;

  @media screen and (max-width: 1280px) {
    grid-template-columns: repeat(3, 1fr);
  }
  @media screen and (max-width: 720px) {
    grid-template-columns: repeat(2, 1fr);
  }
}

.dashboard-cards-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  grid-gap: 15px;
  margin-top: 25px;

  @media screen and (max-width: $smDesktopWidth) {
    grid-template-columns: repeat(2, 1fr);
  }
  @media screen and (max-width: $phoneWidth) {
    grid-template-columns: repeat(2, 1fr);
  }
}

.card-wrapper {
  width: 100%;
}

